--- a/client/src/index.css
+++ b/client/src/index.css
@@ -62,6 +62,7 @@ body {
 h1 {
   text-align: center;
   color: var(--main-red);
+  margin: 20px;
 }
 
 form.form {
@@ -72,7 +73,6 @@ form.form {
   background-color: #1e1e1e;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   margin: 20px auto;
 }
 
@@ -139,6 +139,12 @@ form.form {
 .citySearch-nav {
   border-radius: 8px 0 0 0;
 }
+
+.zipSearch-nav {
+  border-left: var(--secondary-red) 1px solid;
+  border-right: var(--secondary-red) 1px solid;
+}
+
 .coordinateSearch-nav {
   border-radius: 0 8px 0 0;
 }
