--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,9 +15,13 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   --dark-main: #09090b;
-  --main-red: #e11d48;
+  --dark-red: #e11d48;
   --secondary-red: #f43f5e;
   --main-light: #fff1f2;
+  --dark-green: #4aa93b;
+  --med-green: #52cf30;
+  --light-green: #92db4c;
+  --palmetto-gray: #2e394b;
 
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -59,10 +63,15 @@ body {
   margin: 15px;
 }
 
-h1 {
+.logo {
+  width: 50px;
+}
+
+.title {
   text-align: center;
-  color: var(--main-red);
+  color: var(--med-green);
   margin: 20px;
+  display: flex;
 }
 
 form.form {
@@ -73,7 +82,7 @@ form.form {
   background-color: #1e1e1e;
   padding: 20px;
   border-radius: 8px;
-  margin: 20px auto;
+  margin: 0 auto;
 }
 
 .form-wrapper {
@@ -126,13 +135,14 @@ form.form {
   width: 100%;
   display: flex;
   justify-content: center;
+  border-bottom: 1px solid var(--med-green);
 }
 
 .citySearch-nav, 
 .zipSearch-nav,
 .coordinateSearch-nav {
-  background-color: var(--main-red);
-  color: var(--main-light);
+  background-color: var(--med-green);
+  color: var(--palmetto-gray);
   padding: 10px 20px;
 }
 
@@ -141,8 +151,8 @@ form.form {
 }
 
 .zipSearch-nav {
-  border-left: var(--secondary-red) 1px solid;
-  border-right: var(--secondary-red) 1px solid;
+  border-left: var(--dark-green) 1px solid;
+  border-right: var(--dark-green) 1px solid;
 }
 
 .coordinateSearch-nav {
@@ -152,6 +162,10 @@ form.form {
 .citySearch-nav:hover, 
 .zipSearch-nav:hover,
 .coordinateSearch-nav:hover {
-  background-color: var(--secondary-red);
+  background-color: var(--light-green);
   cursor: pointer;
+}
+
+.selected { 
+  background-color: var(--light-green);
 }
